edit WebConfig CORS 2